CS fix keyboard layout issue

--- a/packages/backgammon/src/views/game/components/Chat/components/NewMessage/components/Form/Form.module.css
+++ b/packages/backgammon/src/views/game/components/Chat/components/NewMessage/components/Form/Form.module.css
@@ -7,7 +7,7 @@
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
     border: medium none;
     color: #ffffff;
-    font-size: 3vh;
+    font-size: 1rem;
     width: 80%;
 }
 
